projects/bot_eval_run/release_gate_local_after_node_cmd_retry_20260224_201147/python-ai-stdlib-oracle_run_02/iterations/03/cmd_python_-m_unittest_discover_-v_-s_tests_-p_test_.py_.stderr.txt
test_oracle (unittest.loader._FailedTest.test_oracle) ... ERROR

======================================================================
ERROR: test_oracle (unittest.loader._FailedTest.test_oracle)
----------------------------------------------------------------------
ImportError: Failed to import test module: test_oracle
Traceback (most recent call last):
  File "C:\Users\atrep\AppData\Local\Programs\Python\Python312\Lib\unittest\loader.py", line 396, in _find_test_path
    module = self._get_module_from_name(name)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\atrep\AppData\Local\Programs\Python\Python312\Lib\unittest\loader.py", line 339, in _get_module_from_name
    __import__(name)
  File "C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\release_gate_local_after_node_cmd_retry_20260224_201147\python-ai-stdlib-oracle_run_02\workspace\tests\test_oracle.py", line 8, in <module>
    from mini_ai.markov import MarkovChain
  File "C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\release_gate_local_after_node_cmd_retry_20260224_201147\python-ai-stdlib-oracle_run_02\workspace\mini_ai\markov.py", line 47
    mc = cls(order=d["order"])
    ^^
IndentationError: expected an indented block after function definition on line 46


----------------------------------------------------------------------
Ran 1 test in 0.000s

FAILED (errors=1)
